[gd_scene load_steps=5 format=3 uid="uid://35fv5sxiel01"]

[ext_resource type="Script" path="res://scripts/live2d/live_2d_melba_server.gd" id="1_1e3v3"]
[ext_resource type="Script" path="res://scripts/websocket/web_socket_server.gd" id="2_pfmd7"]
[ext_resource type="PackedScene" uid="uid://h1kmx2dkntdj" path="res://scenes/live2d/live_2d_melba.tscn" id="2_q4dky"]
[ext_resource type="Texture2D" uid="uid://bv6frero5onkm" path="res://assets/overlays/Overlay_V1.png" id="3_mwtsf"]

[node name="Live2DMelbaServer" type="Node2D"]
script = ExtResource("1_1e3v3")

[node name="Live2DMelba" parent="." instance=ExtResource("2_q4dky")]
position = Vector2(160, 349)

[node name="WebSocketServer" type="Node" parent="."]
script = ExtResource("2_pfmd7")

[node name="OverlayV1" type="Sprite2D" parent="."]
position = Vector2(320, 180)
scale = Vector2(0.33287, 0.33287)
texture = ExtResource("3_mwtsf")

[connection signal="client_connected" from="WebSocketServer" to="." method="_on_web_socket_server_client_connected"]
[connection signal="message_received" from="WebSocketServer" to="." method="_on_web_socket_server_message_received"]
